--- a/PMApp/src/app/shared/sidebar/sidebar.component.html
+++ b/PMApp/src/app/shared/sidebar/sidebar.component.html
@@ -4,5 +4,9 @@
   (onHide)="onHide()"
   styleClass="p-sidebar-sm"
 >
-  <p-menu [model]="items"></p-menu>
+  <p-menu
+    [model]="items"
+    [style]="{ width: '100%', border: '0px' }"
+    class="m-0 p-0"
+  ></p-menu>
 </p-sidebar>
