--- a/PMApp/src/app/features/auth/components/login-form/login-form.component.html
+++ b/PMApp/src/app/features/auth/components/login-form/login-form.component.html
@@ -32,15 +32,9 @@
         <div
           class="flex flex-wrap justify-content-around px-1 pt-0 mt-0 gap-0 lg:px-6"
         >
-          <button
-            pButton
-            pRipple
-            label="Enviar"
-            icon="pi pi-check"
-            (click)="onLogin()"
-          ></button>
-          <!--           
-          <button
+          <button pButton pRipple label="Enviar" (click)="onLogin()"></button>
+
+          <!-- <button
             pButton
             pRipple
             id="btn_googleLogin"
